# Turtlebot_Burger_Final

./: Project_Launching_Steps  README.md
turtlebot3_laptop_code/: CMakeLists.txt  package.xml
turtlebot3_laptop_code/scripts/: object_detection_node.py  odom_publisher.py  rotate.py  sound_track.py  visualisation.py
turtlebot3_project_launch/: CMakeLists.txt  package.xml
turtlebot3_project_launch/launch/: obstacle avoidance.launch  project.launch
turtlebot3_robot_code/: platformio.ini
turtlebot3_robot_code/include/: DCMotor.h  DifferentialDriveRobot.h  Encoder.h
turtlebot3_robot_code/src/: robot_node.ino
