<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_project_launch</name>
  <version>0.0.0</version>
  <description>The turtlebot3_project_launch package</description>

  <maintainer email="your-email@domain.com">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>turtlebot3_laptop_code</build_depend>
  <build_depend>turtlebot3_gazebo</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>turtlebot3_laptop_code</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
  </export>
</package>
